portfolio site mostly done

--- a/index.html
+++ b/index.html
@@ -11,19 +11,100 @@
 
 <body>
     <main class="main-container">
-    <section class="hero-container">
-        <h1 id="first-name"><span>M</span>ALEK</h1>
-        <div class="title">
-            <h3>JUNIOR FRONT END DEVELOPER</h3>
-        </div>
-        <h1 id="last-name">MAHFOUDH</h1> 
-    </section>
+        <section class="hero-container">
+            <h1 id="first-name"><span>M</span>ALEK</h1>
+            <div class="title">
+                <h3>JUNIOR FRONT END DEVELOPER</h3>
+            </div>
+            <h1 id="last-name">MAHFOUDH</h1>
+        </section>
 
-    <section class="links">
-        <button id="about-btn">ABOUT</button>
-        <button id="portfolio-btn">PORTFOLIO</button>
-        <button id="contact-btn">CONTACT</button>
-    </section>
+        <section class="links">
+            <button id="about-btn">ABOUT</button>
+            <article class="about-container">
+                <div class="about-container__info">
+                    <p>
+                        After three years of university and a bachelors degree in sociology,
+                        I realised that my ambitions lie elsewhere. I tried my hand at
+                        different career choises ranging from sales to workout and wellness.
+                    </p>
+                    <p>
+                        As someone who have always been of the creative mind in music,
+                        film making and theatre I knew that a career where I could hone
+                        these skills would be the perfect fit.
+                        And so I found my way into the relm of web development.
+                    </p>
+                    <p>
+                        As I am a front end developer student, my skills are still groing and expanding 
+                        as weeks go by. I have listed below the programming languages, frameworks and tools 
+                        I know and currently learning.
+                    </p>
+
+                    <div class="language-container">
+                        <section class="language">HTML</section>
+                        <section class="language">CSS</section>
+                        <section class="language">JS</section>
+                        <section class="language">REACT</section>
+                        <section class="language">FIGMA</section>
+                    </div>
+                </div>
+                <img class="malek-img" src="/img/malek.jpeg" alt="">
+                <div class="about-container__facts">
+                    <p class="quote">“The most creative people have this childlike facility to play.” - John Cleese</p>
+                    <p class="quote"></p>
+                    
+                    <p>
+                        Besides my ongoing development (pun intended) in my front end career, in my downtime
+                        I like to play music, video games, try to set a new PR in deadlifts,
+                        binge my favorite tv-shows and invite friends over 
+                        for some dinner and board games. 
+                    </p>
+                    <p>I am also fluent in swedish, english, arabic and dothraki. One of those is a lie.</p>
+
+                </div>
+                
+            </article>
+            <button id="portfolio-btn">PORTFOLIO</button>
+            <article class="portfolio-container">
+
+                <div class="portfolio-project__one">
+                    <a href="https://solaris-by-malle.netlify.app/" target="_blank">
+                        <img class="project-img" src="/img/solaris.png" alt="">
+                    </a>
+                    <p class="project-info">Examination in Javascript fetching information about planets through an API
+                    </p>
+                    <div class="language-container">
+                        <section class="language">HTML</section>
+                        <section class="language">CSS</section>
+                        <section class="language">JS</section>
+                    </div>
+                </div>
+
+                <div class="portfolio-project__two">
+                    <a href="https://unitconverter-by-malle.netlify.app/" target="_blank">
+                        <img class="project-img" src="/img/unitconv.png" alt="">
+                    </a>
+                    <p class="project-info">Unit converter from a solo project from a Scrimba course. Converts from metric to imperial.</p>
+                    <div class="language-container">
+                        <section class="language">HTML</section>
+                        <section class="language">CSS</section>
+                        <section class="language">JS</section>
+                    </div>
+                </div>
+
+            </article>
+            <button id="contact-btn">CONTACT</button>
+            <article class="contact-container">
+                <a href="mailto:malek.mahfoudh7@me.com"><img class="icon" src="/img/icons/at-solid.svg" alt=""></a>
+                <a href="https://www.linkedin.com/in/malek-mahfoudh/" target="_blank"><img class="icon" src="/img/icons/linkedin.svg" alt=""></a>
+                <a href="https://github.com/malekmahfoudh" target="_blank"><img class="icon" src="/img/icons/github.svg" alt=""></a>
+                <a href="https://www.instagram.com/malekmahfoudh/" target="_blank"><img class="icon" src="/img/icons/instagram.svg" alt=""></a>
+                <a href="tel: 0701499254" target="_blank"><img class="icon" src="/img/icons/phone-solid.svg" alt=""></a>
+            </article>
+        </section>
+        <section class="watermark">
+            <p>by malek mahfoudh &#169;</p>
+        </section>
     </main>
     <script src="script.js"></script>
 </body>
