--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <section class="links">
             <button id="about-btn">ABOUT</button>
-            <article class="about-container">
+            <article class="about-container container">
                 <div class="about-container__info">
                     <p>
                         After three years of university and a bachelors degree in sociology,
@@ -35,11 +35,15 @@
                         And so I found my way into the relm of web development.
                     </p>
                     <p>
-                        As I am a front end developer student, my skills are still groing and expanding 
-                        as weeks go by. I have listed below the programming languages, frameworks and tools 
+                        As I am a front end developer student, my skills are still groing and expanding
+                        as weeks go by. I have listed below the programming languages, frameworks and tools
                         I know and currently learning.
                     </p>
 
+
+                </div>
+                <section class="mid">
+                    <img class="malek-img" src="/img/malek.jpeg" alt="">
                     <div class="language-container">
                         <section class="language">HTML</section>
                         <section class="language">CSS</section>
@@ -47,25 +51,24 @@
                         <section class="language">REACT</section>
                         <section class="language">FIGMA</section>
                     </div>
-                </div>
-                <img class="malek-img" src="/img/malek.jpeg" alt="">
+                </section>
                 <div class="about-container__facts">
                     <p class="quote">“The most creative people have this childlike facility to play.” - John Cleese</p>
                     <p class="quote"></p>
-                    
+
                     <p>
                         Besides my ongoing development (pun intended) in my front end career, in my downtime
                         I like to play music, video games, try to set a new PR in deadlifts,
-                        binge my favorite tv-shows and invite friends over 
-                        for some dinner and board games. 
+                        binge my favorite tv-shows and invite friends over
+                        for some dinner and board games.
                     </p>
                     <p>I am also fluent in swedish, english, arabic and dothraki. One of those is a lie.</p>
 
                 </div>
-                
+
             </article>
             <button id="portfolio-btn">PORTFOLIO</button>
-            <article class="portfolio-container">
+            <article class="portfolio-container container">
 
                 <div class="portfolio-project__one">
                     <a href="https://solaris-by-malle.netlify.app/" target="_blank">
@@ -84,7 +87,8 @@
                     <a href="https://unitconverter-by-malle.netlify.app/" target="_blank">
                         <img class="project-img" src="/img/unitconv.png" alt="">
                     </a>
-                    <p class="project-info">Unit converter from a solo project from a Scrimba course. Converts from metric to imperial.</p>
+                    <p class="project-info">Unit converter from a solo project from a Scrimba course. Converts from
+                        metric to imperial.</p>
                     <div class="language-container">
                         <section class="language">HTML</section>
                         <section class="language">CSS</section>
@@ -94,12 +98,18 @@
 
             </article>
             <button id="contact-btn">CONTACT</button>
-            <article class="contact-container">
-                <a href="mailto:malek.mahfoudh7@me.com"><img class="icon" src="/img/icons/at-solid.svg" alt=""></a>
-                <a href="https://www.linkedin.com/in/malek-mahfoudh/" target="_blank"><img class="icon" src="/img/icons/linkedin.svg" alt=""></a>
-                <a href="https://github.com/malekmahfoudh" target="_blank"><img class="icon" src="/img/icons/github.svg" alt=""></a>
-                <a href="https://www.instagram.com/malekmahfoudh/" target="_blank"><img class="icon" src="/img/icons/instagram.svg" alt=""></a>
-                <a href="tel: 0701499254" target="_blank"><img class="icon" src="/img/icons/phone-solid.svg" alt=""></a>
+            <article class="contact-container container">
+                <section class="contact--links">
+                    <a href="mailto:malek.mahfoudh7@me.com"><img class="icon" src="/img/icons/at-solid.svg" alt=""></a>
+                    <a href="https://www.linkedin.com/in/malek-mahfoudh/" target="_blank"><img class="icon"
+                            src="/img/icons/linkedin.svg" alt=""></a>
+                    <a href="https://github.com/malekmahfoudh" target="_blank"><img class="icon"
+                            src="/img/icons/github.svg" alt=""></a>
+                    <a href="https://www.instagram.com/malekmahfoudh/" target="_blank"><img class="icon"
+                            src="/img/icons/instagram.svg" alt=""></a>
+                    <a href="tel: 0701499254" target="_blank"><img class="icon" src="/img/icons/phone-solid.svg"
+                            alt=""></a>
+                </section>
             </article>
         </section>
         <section class="watermark">
